@@ -634,4 +634,8 @@ function insert_js($script){
 function get_js($script){
 	return('<script type="text/javascript">// <![CDATA['."\n".$script."\n".'// ]]></script>');
 }
+
+function include_js($script){
+	echo '<script src="'.$script.'" type="text/javascript"></script>';
+}
 ?>
