@@ -2,6 +2,7 @@
 Changes for 1.9.6
 
 New features:
+ - [ZBXNEXT-889] redesign general->Images (Eduard)
  - [ZBXNEXT-785] support of automatic selection of map icon element depending on element type (Vedmak,Eduard)
  - [ZBX-3683] removed the obsolete item zabbix[log] (Sasha)
  - [ZBXNEXT-891] redesign general->Value mapping (Eduard)
